// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numberInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <div>
          <div
            class="uv_1ce7gb6h uv_1ce7gb6p uv_1ce7gb6i"
            data-controls="true"
            data-disabled="false"
            data-error="false"
            data-size="large"
            data-success="false"
            data-unit="false"
          >
            <div
              class="uv_1ce7gb62 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5j"
              data-size="large"
            >
              <button
                aria-label="minus"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza styles_undefined_compound_39__1sbwqkz1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="uv_1ce7gb63 uv_x6hyh50 uv_x6hyh52p uv_x6hyh561"
              style="--uv_3mg8xe0: 1fr auto; --uv_3mg8xe1: 1fr auto; --uv_3mg8xe2: 1fr auto; --uv_3mg8xe3: 1fr auto; --uv_3mg8xe4: 1fr auto; --uv_3mg8xe5: 1fr auto;"
            >
              <input
                class="uv_1ce7gb6b uv_1ce7gb6f"
                id="«r0»"
                max="9007199254740991"
                min="0"
                name="test"
                placeholder=""
                type="number"
              />
            </div>
            <div
              class="uv_1ce7gb62 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5j"
              data-size="large"
            >
              <button
                aria-label="plus"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza styles_undefined_compound_39__1sbwqkz1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`numberInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <div>
          <div
            class="uv_1ce7gb6h uv_1ce7gb6p uv_1ce7gb6m"
            data-controls="true"
            data-disabled="true"
            data-error="false"
            data-size="large"
            data-success="false"
            data-unit="false"
          >
            <div
              class="uv_1ce7gb62 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5j"
              data-size="large"
            >
              <button
                aria-label="minus"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoej uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                disabled=""
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza styles_undefined_compound_39__1sbwqkz1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="uv_1ce7gb63 uv_x6hyh50 uv_x6hyh52p uv_x6hyh561"
              style="--uv_3mg8xe0: 1fr auto; --uv_3mg8xe1: 1fr auto; --uv_3mg8xe2: 1fr auto; --uv_3mg8xe3: 1fr auto; --uv_3mg8xe4: 1fr auto; --uv_3mg8xe5: 1fr auto;"
            >
              <input
                aria-label="Number Input"
                class="uv_1ce7gb6b uv_1ce7gb6f"
                disabled=""
                id="«r4»"
                max="9007199254740991"
                min="0"
                name="test"
                placeholder=""
                type="number"
              />
            </div>
            <div
              class="uv_1ce7gb62 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5j"
              data-size="large"
            >
              <button
                aria-label="plus"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoej uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                disabled=""
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza styles_undefined_compound_39__1sbwqkz1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
